# CRT_S1

./: CMakeLists.txt  arrays.c  day1.cpp  day1_2.cpp  day1_3.cpp  day2_1.c  day2_10.cpp  day2_11.cpp  day2_2.c  day2_3.cpp  day2_4.c  day2_5.c  day2_6.c  day2_7.cpp  day2_8.cpp  day2_9.cpp  day3_1.c  day5_1.c  day5_2fact.c  diagonal.cpp  invertedtriangle.c  program1.c  squarematrix.c  sumofele.c  sumofevenandodd.cpp  triangle.c  uppertriangle.c
