cmake_minimum_required(VERSION 4.1)
project(CRT_S1 C)

set(CMAKE_C_STANDARD 11)

add_executable(CRT_S1 main.c
        program1.cpp
        day1.cpp
        day1_2.cpp
        day1_3.cpp
        day2_1.cpp
        day2_2.cpp
        day2_3.cpp
        day2_4.cpp
        day2_5.cpp
        day2_6.cpp
        day2_7.cpp
        day2_8.cpp
        day2_9.cpp
        day2_10.cpp
        day2_11.cpp
        day3_1.cpp
        arrays.cpp
        sumofele.cpp
        sumofevenandodd.cpp
        diagonal.cpp
        uppertriangle.cpp)
