cmake_minimum_required(VERSION 4.1)
project(CRT_S1 C)

set(CMAKE_C_STANDARD 11)

add_executable(CRT_S1 main.c
        program1.c
        day1.c
        day1_2.c
        day1_3.c
        day2_1.c
        day2_2.c
        day2_3.c
        day2_4.c
        day2_5.c
        day2_6.c
        day2_7.c
        day2_8.c
        day2_9.c
        day2_10.c
        day2_11.c
        day3_1.c
        arrays.c
        sumofele.c
        sumofevenandodd.c
        diagonal.c
        uppertriangle.c
        squarematrix.c)
